--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -10,6 +10,7 @@
   "+iMTt7": "Check to select this connection",
   "+lpuMl": "Required. The value to return if the expression is 'false'.",
   "+xiT4Q": "Pagination",
+  "//nQG4": "Select an api from apim instance",
   "/AtN16": "(UTC+09:30) Darwin",
   "/B2CTz": "(UTC+08:00) Beijing, Chongqing, Hong Kong, Urumqi",
   "/I/U8L": "Body",
@@ -25,6 +26,7 @@
   "/rjP4U": "(UTC) Coordinated Universal Time",
   "/sMQhI": "(UTC-05:00) Indiana (East)",
   "/ut0u7": "Returns the first Count elements from the array or string passed in",
+  "/yYyOq": "Resource Group",
   "00xlpa": "Shared",
   "02vyBk": "Trigger",
   "07ZsoY": "Returns the start of the hour to a string timestamp passed in",
@@ -53,7 +55,6 @@
   "11qu8f": "Enter a valid integer.",
   "14lYtE": "18",
   "1A1P5b": "Comment",
-  "1ANUHk": "Loading functions...",
   "1D047X": "Required. The value to convert to XML.",
   "1Fn5n+": "Required. The URI encoded string.",
   "1NBvKu": "Convert the parameter argument to a floating-point number",
@@ -211,6 +212,7 @@
   "9x8hg8": "Edit in basic mode",
   "A5Ferh": "Source element removed from view.",
   "ADM1Z8": "Authentication Type",
+  "AGCm1p": "Name",
   "AHB418": "Filter Actions",
   "AIL7WX": "(UTC+02:00) Gaza, Hebron",
   "ALImBL": "(UTC+00:00) Monrovia, Reykjavik",
@@ -376,6 +378,7 @@
   "LOwePI": "Invalid type on split on value '{splitOn}', split on not in array.",
   "LR/3Lr": "Configure",
   "LS8rfZ": "Returns the scheme from a URI",
+  "LV/BTE": "Loading Api Management service instances...",
   "LZm3ze": "Add a parallel branch",
   "Lft/is": "Add new",
   "Li6x/B": "Missing required properties '{0}' for authentication type '{1}'",
@@ -627,6 +630,7 @@
   "_+iMTt7.comment": "aria label description for check button",
   "_+lpuMl.comment": "Required value parameter to return given if function is false",
   "_+xiT4Q.comment": "title for pagination setting",
+  "_//nQG4.comment": "Label for api selection",
   "_/AtN16.comment": "Timezone value ",
   "_/B2CTz.comment": "Timezone value ",
   "_/I/U8L.comment": "Label text for request or response body",
@@ -642,6 +646,7 @@
   "_/rjP4U.comment": "Timezone value ",
   "_/sMQhI.comment": "Timezone value ",
   "_/ut0u7.comment": "Label for description of custom take Function",
+  "_/yYyOq.comment": "Header for resource group name",
   "_00xlpa.comment": "Filter by Shared category of connectors",
   "_02vyBk.comment": "Badge showing an action is a logic apps trigger",
   "_07ZsoY.comment": "Label for description of custom startOfHour Function",
@@ -670,7 +675,6 @@
   "_11qu8f.comment": "Error validation message",
   "_14lYtE.comment": "Hour of the day",
   "_1A1P5b.comment": "Comment Label",
-  "_1ANUHk.comment": "Message to show under the loading icon when loading functions",
   "_1D047X.comment": "Required string parameter to be converted using xml function",
   "_1Fn5n+.comment": "Required URI encoded string parameter to be converted using uriComponentToBinary function",
   "_1NBvKu.comment": "Label for description of custom float Function",
@@ -828,6 +832,7 @@
   "_9x8hg8.comment": "Button Label when clicked to swith to basic editor",
   "_A5Ferh.comment": "Message on removing source node",
   "_ADM1Z8.comment": "Label for Authentication Type dropdown",
+  "_AGCm1p.comment": "Header for resource name",
   "_AHB418.comment": "Filter Actions",
   "_AIL7WX.comment": "Timezone value ",
   "_ALImBL.comment": "Timezone value ",
@@ -993,6 +998,7 @@
   "_LOwePI.comment": "Error message for when split on array is invalid.",
   "_LR/3Lr.comment": "Configure",
   "_LS8rfZ.comment": "Label for description of custom uriScheme Function",
+  "_LV/BTE.comment": "Text for loading apim service instances",
   "_LZm3ze.comment": "Text for button to add a parallel branch",
   "_Lft/is.comment": "Button to add a new connection",
   "_Li6x/B.comment": "Error message when missing multiple required authentication properties",
@@ -1240,6 +1246,7 @@
   "_aH9SV7.comment": "Timezone value ",
   "_aJxefp.comment": "Text for add new parameter button",
   "_aK4iLW.comment": "title for data handling setting section",
+  "_aSnCCB.comment": "Header for resource lcoation",
   "_ahsVI/.comment": "OAuth Pfx Placeholder Text",
   "_amRYtC.comment": "Error validation message",
   "_auUI93.comment": "label to inform to upload or select source schema to be used",
@@ -1370,7 +1377,6 @@
   "_iq+tiv.comment": "Hour of the day",
   "_iql+jn.comment": "This is a period in time in seconds. {seconds} is replaced by the number and s is an abbreviation of seconds",
   "_isnFBi.comment": "Message on switching levels with nodes/mappings not connected to a target schema node",
-  "_ittN0l.comment": "Message to show when no functions are found",
   "_iy8rNf.comment": "Button text for running test",
   "_j1VU25.comment": "Timezone value ",
   "_j2MU0b.comment": "Label for description of custom removeProperty Function",
@@ -1384,6 +1390,7 @@
   "_jQjteB.comment": "label to inform to add a source schema to be used",
   "_jUDhbs.comment": "Label to inform the below schema name is for target schema",
   "_jVpanH.comment": "Required base64 string parameter to be decoded using decodeBase64 function",
+  "_jZjgYZ.comment": "Message to show when no resources are found",
   "_jcA3Ig.comment": "Required string parameter to be used as key for formDataMultiValues function",
   "_jfInxm.comment": "Parameter Link Text",
   "_jgOaTX.comment": "Error Message on generating schema based on payload",
@@ -1667,6 +1674,7 @@
   "aH9SV7": "(UTC+05:00) Ashgabat, Tashkent",
   "aJxefp": "Add new parameters",
   "aK4iLW": "Data Handling",
+  "aSnCCB": "Location",
   "ahsVI/": "Enter Pfx",
   "amRYtC": "Enter a valid float.",
   "auUI93": "Add or select a source schema to use for your map.",
@@ -1797,7 +1805,6 @@
   "iq+tiv": "11",
   "iql+jn": "{seconds}s",
   "isnFBi": "Elements and mappings not connected to a target element are removed.",
-  "ittN0l": "No resources of this type found under this subscription.",
   "iy8rNf": "Test",
   "j1VU25": "(UTC+14:00) Kiritimati Island",
   "j2MU0b": "Returns an object with a property removed",
@@ -1811,6 +1818,7 @@
   "jQjteB": "Add a source schema",
   "jUDhbs": "Target schema",
   "jVpanH": "Required. A base64 input string.",
+  "jZjgYZ": "No resources of this type found under this subscription.",
   "jcA3Ig": "Required. The key name of the form data values to return.",
   "jfInxm": "Edit in JSON",
   "jgOaTX": "Unable to generate schema",
