--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -40,7 +40,6 @@
   "0KMjv6": "Tracking",
   "0R2D5l": "Returns a binary representation of a URI encoded string",
   "0Vzp0l": "Collapse",
-  "0Wr7qp": "Select a filter",
   "0ZlNtf": "Succeeded with retries",
   "0hxr5j": "(UTC-05:00) Chetumal",
   "0i/6TR": "Required. The string to convert to upper casing. If a character in the string does not have an uppercase equivalent, the character is included unchanged in the returned string.",
@@ -136,7 +135,6 @@
   "4vcnOA": "Returns the minimum value in the input array of numbers",
   "4vmGh0": "Service request ID",
   "4wjJs0": "14",
-  "4yC+4g": "Action Type",
   "5+MuPz": "Enter a valid double.",
   "5J7j9k": "Required. The XPath expression to evaluate.",
   "5SAQOb": "Authority",
@@ -271,6 +269,7 @@
   "ECZC6Y": "Converts the parameter to a decimal number",
   "ERAWZA": "Response",
   "ERVorY": "Make Group",
+  "EUQDM6": "Add an action",
   "EV9iRu": "Failed to save.",
   "EYqGxA": "(UTC+02:00) Athens, Bucharest",
   "EZz5q7": "Required. The index of where to start extracting the substring.",
@@ -340,7 +339,6 @@
   "IW2MjQ": "Converts a string timestamp passed in from a UTC to a target time zone",
   "IXy91L": "Add a target schema",
   "IjZFjQ": "(UTC+07:00) Barnaul, Gorno-Altaysk",
-  "IlY1Lj": "Return to browse",
   "IooQu1": "Advanced options",
   "Ip7Iax": "Returns the index of the n-th occurrence of a value within a string (case-insensitive, invariant culture)",
   "IpVwYT": "Returns the first non-null object in the arguments passed in",
@@ -421,7 +419,6 @@
   "NoXs0l": "Please select an identity",
   "NvANon": "(UTC-09:00) Alaska",
   "NvJDn/": "Tuesday",
-  "NvmZVi": "Runtime",
   "O+8vRv": "Returns a binary representation of a value",
   "O36+wl": "Edit Parameter",
   "O9ZExg": "OK",
@@ -443,7 +440,6 @@
   "OjGJ8Y": "Returns the host from a URI",
   "OnrO5/": "Select a managed identity",
   "P+mWgV": "Pfx",
-  "P+na99": "Filter",
   "P2A5dB": "Required. This value is the number of integers that is in the array.",
   "P2rzqn": "Default value",
   "P4rEwD": "Collection functions",
@@ -514,6 +510,7 @@
   "TNzcrv": "(UTC+10:00) Vladivostok",
   "TO7qos": "Returns the start of the month of a string timestamp",
   "TPV6j/": "Paging count invalid",
+  "TRpSCQ": "Action Type",
   "TUaunO": "Enter a value",
   "TX4Kdr": "Create a new connection",
   "TY4HzZ": "Add or replace your schemas.",
@@ -546,7 +543,6 @@
   "VA7M1u": "In App",
   "VE3cxq": "(UTC-07:00) Mountain Time (US & Canada)",
   "VI5Sa8": "Expand",
-  "VJa7sh": "Browse operations",
   "VKAk5g": "The provided workflow run name is not valid.",
   "VL9wOu": "Must provide value for parameter.",
   "VLc3FV": "Source schema",
@@ -660,7 +656,6 @@
   "_0KMjv6.comment": "title for tracking component",
   "_0R2D5l.comment": "Label for description of custom uriComponentToBinary Function",
   "_0Vzp0l.comment": "Collapse, making the node smaller, hiding the contents",
-  "_0Wr7qp.comment": "Select a filter placeholder",
   "_0ZlNtf.comment": "This is a status message to be shown in a monitoring view. This refers to the succeeded status of a previous action.",
   "_0hxr5j.comment": "Timezone value ",
   "_0i/6TR.comment": "Required text parameter to upper case",
@@ -756,7 +751,6 @@
   "_4vcnOA.comment": "Label for description of custom min Function",
   "_4vmGh0.comment": "Label text for retry service request ID",
   "_4wjJs0.comment": "Hour of the day",
-  "_4yC+4g.comment": "Filter by action type",
   "_5+MuPz.comment": "Error validation message",
   "_5J7j9k.comment": "Required xpath parameter to identify which xPath to evaluate",
   "_5SAQOb.comment": "Authority Label Display Name",
@@ -891,6 +885,7 @@
   "_ECZC6Y.comment": "Label for description of custom decimal Function",
   "_ERAWZA.comment": "Header text for response",
   "_ERVorY.comment": "Make group button",
+  "_EUQDM6.comment": "Text for the \"Add Action\" page header",
   "_EV9iRu.comment": "Message on failed save",
   "_EYqGxA.comment": "Timezone value ",
   "_EZz5q7.comment": "Required start index parameter to obtain substring",
@@ -960,7 +955,6 @@
   "_IW2MjQ.comment": "Label for description of custom convertFromUtc Function",
   "_IXy91L.comment": "label to inform to add a target schema to be used",
   "_IjZFjQ.comment": "Timezone value ",
-  "_IlY1Lj.comment": "Text for the Search Operations page navigation heading",
   "_IooQu1.comment": "Advanced options",
   "_Ip7Iax.comment": "Label for description of custom nthIndexOf Function",
   "_IpVwYT.comment": "Label for description of custom coalesce Function",
@@ -1041,7 +1035,6 @@
   "_NoXs0l.comment": "MSI Identity Placeholder Text",
   "_NvANon.comment": "Timezone value ",
   "_NvJDn/.comment": "Day of the week",
-  "_NvmZVi.comment": "Filter by runtime header",
   "_O+8vRv.comment": "Label for description of custom binary Function",
   "_O36+wl.comment": "Edit Button Tooltip Text",
   "_O9ZExg.comment": "Confirmation text for delete button",
@@ -1063,7 +1056,6 @@
   "_OjGJ8Y.comment": "Label for description of custom uriHost Function",
   "_OnrO5/.comment": "A placeholder for the managed identity dropdown",
   "_P+mWgV.comment": "Client Certificate Pfx Label Display Name",
-  "_P+na99.comment": "Filter by label",
   "_P2A5dB.comment": "Required number parameter to identify number of integers in range function",
   "_P2rzqn.comment": "Default value",
   "_P4rEwD.comment": "Label for collection functions",
@@ -1134,6 +1126,7 @@
   "_TNzcrv.comment": "Timezone value ",
   "_TO7qos.comment": "Label for description of custom startOfMonth Function",
   "_TPV6j/.comment": "error message for invalid paging count",
+  "_TRpSCQ.comment": "Filter by label",
   "_TUaunO.comment": "error displayed when no value is entered",
   "_TX4Kdr.comment": "aria label description for create button",
   "_TY4HzZ.comment": "Description for the schema section",
@@ -1166,7 +1159,6 @@
   "_VA7M1u.comment": "\"In App\" category name",
   "_VE3cxq.comment": "Timezone value ",
   "_VI5Sa8.comment": "Label to expand",
-  "_VJa7sh.comment": "Text for the Browse operations page navigation heading",
   "_VKAk5g.comment": "Message text for an invalid run ID",
   "_VL9wOu.comment": "Error message when the workflow parameter value is empty.",
   "_VLc3FV.comment": "Source schema",
@@ -1327,6 +1319,7 @@
   "_g0a4Qe.comment": "Accessibility Label for the dictionary text value field",
   "_g1zwch.comment": "Label to zoom the canvas in",
   "_g4igOR.comment": "Button text for publish",
+  "_g5A6Bn.comment": "Filter by label",
   "_g5mMuM.comment": "Timezone value ",
   "_g7my78.comment": "Run test",
   "_gCXOd5.comment": "Label text for request URI (uniform resource identifier)",
@@ -1428,6 +1421,7 @@
   "_lexzgJ.comment": "Message on failure to remove source node",
   "_lgs5sf.comment": "label text for stateless run mode",
   "_ljAOR6.comment": "Label for description of custom body Function",
+  "_lsKVU6.comment": "Select an action type placeholder",
   "_lzBHHT.comment": "Error message for unknown property",
   "_lztiwS.comment": "Parameter Field Actual Value Title",
   "_m7Y6Qf.comment": "Title for a tab panel",
@@ -1576,6 +1570,7 @@
   "_uXJdAh.comment": "Placeholder text to search token picker",
   "_uZH8Qs.comment": "description of action timeout setting",
   "_uc/PoD.comment": "Required integer parameter to see how far in the past",
+  "_uc3ytS.comment": "Select a runtime placeholder",
   "_uczA5c.comment": "Required text parameter to search startsWith function on",
   "_udNlco.comment": "Timezone value ",
   "_uesaee.comment": "Expression",
@@ -1755,6 +1750,7 @@
   "g0a4Qe": "Value",
   "g1zwch": "Zoom in",
   "g4igOR": "Publish",
+  "g5A6Bn": "Runtime",
   "g5mMuM": "(UTC-03:00) Saint Pierre and Miquelon",
   "g7my78": "Run test",
   "gCXOd5": "URI",
@@ -1856,6 +1852,7 @@
   "lexzgJ": "Remove all references to element ' {nodeName} ' before you remove the element.",
   "lgs5sf": "Stateless run mode:",
   "ljAOR6": "Shorthand for actions('actionName').outputs.body",
+  "lsKVU6": "Select an action type",
   "lzBHHT": "Array Element {index} has unknown property {property}",
   "lztiwS": "Actual Value",
   "m7Y6Qf": "Testing",
@@ -2004,6 +2001,7 @@
   "uXJdAh": "Search dynamic content",
   "uZH8Qs": "Limit the maximum duration between the retries and asynchronous responses for this action. Note: This does not alter the request timeout of a single request.",
   "uc/PoD": "Required. The number of time units the desired time is in the past.",
+  "uc3ytS": "Select a runtime",
   "uczA5c": "Required. The string that may contain the value.",
   "udNlco": "(UTC-11:00) Coordinated Universal Time-11",
   "uesaee": "Expression",
