LaFeat: Load dynamic run instance data to monitoring view mode (#1598)
* Add runInstance to state, add run instance interface and add mock

* Add runInstance to graphState

* Add status and duration from mocked runData

* Add dynamic data to scopecard

* Update default duration to 0s and load run data if is monitoring view

* Update node run metada structure and add error message when monitorig view to connector

* Update error message on scope card

* Add color and variables to monitoring tab

* Add static properties

* Update properties tab content

* Fix run data initialization

* Add reject with value for async thunk

* Update runInstance types

* Update runInstance as not neeeded in workflow provider

* Fix typo and update functions to cleaner way

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -21,6 +21,7 @@
   "/VcZ9g": "This connector has multiple versions, built-in and Azure-hosted. Use built-in for the best performance, connection-string authentication, and other features. Use Azure-hosted for other authentication options.",
   "/WW7If": "True",
   "/doURb": "Convert the input to an array",
+  "/n13VL": "Properties",
   "/qchXQ": "Required. The collection to join items from.",
   "/qu3zt": "0",
   "/rjP4U": "(UTC) Coordinated Universal Time",
@@ -45,6 +46,7 @@
   "0hxr5j": "(UTC-05:00) Chetumal",
   "0i/6TR": "Required. The string to convert to upper casing. If a character in the string does not have an uppercase equivalent, the character is included unchanged in the returned string.",
   "0meqK1": "(UTC-05:00) Bogota, Lima, Quito, Rio Branco",
+  "0oebOm": "Outputs",
   "0p+pJq": "Returns the remainder after dividing the two numbers (modulo)",
   "0qV0Qe": "Required. The string that may contain the value.",
   "0qcKzG": "{parameterName} is no longer present in the operation schema. It should be removed before the workflow is re-saved.",
@@ -161,7 +163,9 @@
   "6oqk+A": "Previous",
   "6pd1bE": "(UTC-07:00) Arizona",
   "6qkBwz": "Required. The number to multiply Multiplicand 2 with.",
+  "6ueRYm": "Start time",
   "73iM9+": "Update source schema",
+  "7Fyq1F": "No inputs",
   "7GSk99": "OK",
   "7KxCGX": "(UTC+10:30) Lord Howe Island",
   "7LmpNN": "Parameter \"{parameterName}\" cannot be found for this operation",
@@ -346,6 +350,7 @@
   "IooQu1": "Advanced options",
   "Ip7Iax": "Returns the index of the n-th occurrence of a value within a string (case-insensitive, invariant culture)",
   "IpVwYT": "Returns the first non-null object in the arguments passed in",
+  "IsVhkH": "No properties",
   "J/Kz1j": "Asynchronous Pattern",
   "J5/7vN": "Converts a string to lowercase using the casing rules of the invariant culture",
   "J55HA9": "Invalid operation. Number of items: {length}.",
@@ -453,8 +458,10 @@
   "P6I90y": "Input",
   "P8ZBF9": "Required. The collection to take the first object from.",
   "PBvR9Q": "(UTC-03:00) Araguaina",
+  "PE1tsI": "No outputs",
   "PF87Ew": "Succeeded",
   "PKMkb/": "Required. The number to add to Summand 1.",
+  "PORNMZ": "Inputs",
   "PP63jY": "more panels",
   "PQOiAc": "Collapse",
   "PRnqYA": "Required. The number of seconds to add. Can be negative to subtract seconds.",
@@ -534,6 +541,7 @@
   "U3guPp": "Group by Connector",
   "U3iWVd": "Generates an array of integers starting from a certain number",
   "U56j9a": "(UTC-06:00) Easter Island",
+  "UAwAAS": "Show inputs",
   "UCNM4L": "To reference a parameter, use the dynamic content list.",
   "UEryJE": "Delete Workflow Action",
   "UHCVNK": "Replaces a string with a given string",
@@ -564,6 +572,7 @@
   "VptXzY": "Use \"{value}\" as a custom value",
   "W070M2": "of {max}",
   "W6FdMh": "Required. The name of the new property.",
+  "WCrlES": "Show outputs",
   "WGwH45": "Clear",
   "WLj8DH": "Please enter a valid dictionary",
   "WOOYW1": "Actions perform operations on data or communicate between systems to execute.",
@@ -611,6 +620,7 @@
   "YoQara": "None",
   "Yuu5CD": "Zoom out",
   "Z9PWl/": "Retry Policy count is invalid (Must be from {min} to {max})",
+  "ZBJiuD": "Status",
   "ZCFMoe": "Body",
   "ZM1mRy": "Concurrency Control",
   "ZME5hh": "Returns the day of month component of a string timestamp",
@@ -644,6 +654,7 @@
   "_/VcZ9g.comment": "Description about hybrid connectors",
   "_/WW7If.comment": "True",
   "_/doURb.comment": "Label for description of custom array Function",
+  "_/n13VL.comment": "Properties text",
   "_/qchXQ.comment": "Required collection parameter to apply join function on",
   "_/qu3zt.comment": "Hour of the day",
   "_/rjP4U.comment": "Timezone value ",
@@ -668,6 +679,7 @@
   "_0hxr5j.comment": "Timezone value ",
   "_0i/6TR.comment": "Required text parameter to upper case",
   "_0meqK1.comment": "Timezone value ",
+  "_0oebOm.comment": "Outputs text",
   "_0p+pJq.comment": "Label for description of custom mod Function",
   "_0qV0Qe.comment": "Required text parameter to apply indexOf function on",
   "_0qcKzG.comment": "Unknown Parameter error message",
@@ -784,7 +796,9 @@
   "_6oqk+A.comment": "Text of a button to go to previous page",
   "_6pd1bE.comment": "Timezone value ",
   "_6qkBwz.comment": "Required number parameter to be multiplied in mul function",
+  "_6ueRYm.comment": "Start time text",
   "_73iM9+.comment": "Header to update source schema",
+  "_7Fyq1F.comment": "No inputs text",
   "_7GSk99.comment": "OK message appearing on a confirmation dialog.",
   "_7KxCGX.comment": "Timezone value ",
   "_7LmpNN.comment": "Error message to show in dropdown when dependent parameter is not found",
@@ -969,6 +983,7 @@
   "_IooQu1.comment": "Advanced options",
   "_Ip7Iax.comment": "Label for description of custom nthIndexOf Function",
   "_IpVwYT.comment": "Label for description of custom coalesce Function",
+  "_IsVhkH.comment": "No properties text",
   "_J/Kz1j.comment": "title for async pattern setting",
   "_J5/7vN.comment": "Label for description of custom toLower Function",
   "_J55HA9.comment": "Exception message for invalid formdata operation.",
@@ -1076,8 +1091,10 @@
   "_P6I90y.comment": "Input",
   "_P8ZBF9.comment": "Required collection parameter to apply first function on",
   "_PBvR9Q.comment": "Timezone value ",
+  "_PE1tsI.comment": "No utputs text",
   "_PF87Ew.comment": "This is a status message to be shown in a monitoring view",
   "_PKMkb/.comment": "Required number parameter to be summed in add function",
+  "_PORNMZ.comment": "Inputs text",
   "_PP63jY.comment": "This is a label to access the overflowed panels",
   "_PQOiAc.comment": "An accessible label for collapse toggle icon",
   "_PRnqYA.comment": "Required integer parameter to subtract seconds from time",
@@ -1157,6 +1174,7 @@
   "_U3guPp.comment": "Label for the checkbox to group results by connector",
   "_U3iWVd.comment": "Label for description of custom range Function",
   "_U56j9a.comment": "Timezone value ",
+  "_UAwAAS.comment": "Show inputs text",
   "_UCNM4L.comment": "Description for Workflow Parameters Part 2",
   "_UEryJE.comment": "Title for operation node",
   "_UHCVNK.comment": "Label for description of custom replace Function",
@@ -1187,6 +1205,7 @@
   "_VptXzY.comment": "Label for button to allow user to create custom value in combobox from current input",
   "_W070M2.comment": "Text on a pager where people can select a page number out of {max}",
   "_W6FdMh.comment": "Required string parameter for new property name in addProperty function",
+  "_WCrlES.comment": "Show outputs text",
   "_WGwH45.comment": "Label to clear editor",
   "_WLj8DH.comment": "Error Message for Invalid Dictionary",
   "_WOOYW1.comment": "Description of what Actions are, on a tooltip about Actions",
@@ -1234,6 +1253,7 @@
   "_YoQara.comment": "Display text for when About Panel has no Tags",
   "_Yuu5CD.comment": "Label to zoom the canvas out",
   "_Z9PWl/.comment": "error message for invalid retry count",
+  "_ZBJiuD.comment": "Status text",
   "_ZCFMoe.comment": "Display name for body outputs",
   "_ZM1mRy.comment": "title for concurrency setting",
   "_ZME5hh.comment": "Label for description of custom dayOfMonth Function",
@@ -1311,6 +1331,7 @@
   "_dxh2CJ.comment": "timed out run",
   "_e00zot.comment": "Recurrence parameter group title",
   "_e4Onhn.comment": "This is a status message to be shown in a monitoring view",
+  "_eFet4K.comment": "Action Tracking ID text",
   "_eGa1Wa.comment": "Timezone value ",
   "_eHgi14.comment": "Required string parameter to determine variable wanted",
   "_eRvGw3.comment": "Message to show under the loading icon when loading connectors",
@@ -1465,6 +1486,7 @@
   "_n7wxxN.comment": "Search tip 2",
   "_nGds/r.comment": "Required object parameter to compare to in greaterOrEqual function",
   "_nHseED.comment": "Required integer parameter to see how far in the future",
+  "_nOWGAV.comment": "End time text",
   "_nSan4V.comment": "Reset",
   "_nTA155.comment": "Required string parameter to identify which property to remove",
   "_nZ4nLn.comment": "title for suppress workflow headers setting",
@@ -1625,6 +1647,7 @@
   "_wQsEwc.comment": "Required length parameter to obtain substring",
   "_wV3Lmd.comment": "Label to delete dictionary item",
   "_wWVQuK.comment": "Label for description of custom if Function",
+  "_wkiETV.comment": "Client Tracking ID text",
   "_wl7X0l.comment": "Label to hide the mini-map",
   "_wmDUGV.comment": "Label for description of custom convertToUtc Function",
   "_wmw/ai.comment": "Label for description of custom union Function",
@@ -1743,6 +1766,7 @@
   "dxh2CJ": "timed out",
   "e00zot": "How often do you want to check for items?",
   "e4Onhn": "Not specified",
+  "eFet4K": "Action Tracking ID",
   "eGa1Wa": "(UTC+05:00) Ekaterinburg",
   "eHgi14": "Required. The name of the variable whose value you want.",
   "eRvGw3": "Loading connectors...",
@@ -1897,6 +1921,7 @@
   "n7wxxN": "Try less specific keywords.",
   "nGds/r": "Required. The object to check if it is less than or equal to value being compared to.",
   "nHseED": "Required. The number of time units the desired time is in the future.",
+  "nOWGAV": "End time",
   "nSan4V": "Reset",
   "nTA155": "Required. The name of the property to remove.",
   "nZ4nLn": "Suppress workflow headers",
@@ -2057,6 +2082,7 @@
   "wQsEwc": "Required. The length of the substring.",
   "wV3Lmd": "Click to delete item",
   "wWVQuK": "Returns a specified value based on whether the expression resulted in true or false",
+  "wkiETV": "Client Tracking ID",
   "wl7X0l": "Hide mini-map",
   "wmDUGV": "Converts a string timestamp passed in from a source time zone to UTC",
   "wmw/ai": "Returns a single array or object with all the elements that are in either the array or object passed to this function",
