Checkpoint, merging master next

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -99,6 +99,7 @@
   "3ERi+E": "Terms of Service",
   "3FoqCK": "(UTC+04:00) Tbilisi",
   "3GINhd": "Triggers",
+  "3JZAUy": "TITLE",
   "3NhwIJ": "Required. The separator.",
   "3O0i4j": "There is no content available",
   "3PgHCT": "(UTC+02:00) Chisinau",
@@ -715,6 +716,7 @@
   "_3ERi+E.comment": "Title for terms of service iframe.",
   "_3FoqCK.comment": "Timezone value ",
   "_3GINhd.comment": "Heading for a tooltip explaining Triggers",
+  "_3JZAUy.comment": "Label for function app selection",
   "_3NhwIJ.comment": "Required delimeter parameter to apply split function with",
   "_3O0i4j.comment": "No dynamic content available description",
   "_3PgHCT.comment": "Timezone value ",
@@ -1241,6 +1243,7 @@
   "_aSnCCB.comment": "Header for resource lcoation",
   "_ahsVI/.comment": "OAuth Pfx Placeholder Text",
   "_amRYtC.comment": "Error validation message",
+  "_aoUT/3.comment": "Text for loading Azure Resources",
   "_auUI93.comment": "label to inform to upload or select source schema to be used",
   "_b9/1dK.comment": "A placeholder for the dictionary value field",
   "_b9P8SA.comment": "Exception for unsupported token types",
@@ -1672,6 +1675,7 @@
   "aSnCCB": "Location",
   "ahsVI/": "Enter Pfx",
   "amRYtC": "Enter a valid float.",
+  "aoUT/3": "Loading resources...",
   "auUI93": "Add or select a source schema to use for your map.",
   "b9/1dK": "Value",
   "b9P8SA": "Unsupported Token Type: {controls}",
