First step completed of multi-step connectors

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -8,6 +8,7 @@
   "+dlOgj": "(UTC-05:00) Haiti",
   "+g+mch": "Returns the body for a part in a multipart output of an action",
   "+iMTt7": "Check to select this connection",
+  "+jnjtp": "Select a Manual Workflow resource",
   "+lpuMl": "Required. The value to return if the expression is 'false'.",
   "+xiT4Q": "Pagination",
   "//nQG4": "Select an api from apim instance",
@@ -101,7 +102,6 @@
   "3ERi+E": "Terms of Service",
   "3FoqCK": "(UTC+04:00) Tbilisi",
   "3GINhd": "Triggers",
-  "3JZAUy": "TITLE",
   "3NhwIJ": "Required. The separator.",
   "3O0i4j": "There is no content available",
   "3PgHCT": "(UTC+02:00) Chisinau",
@@ -375,6 +375,7 @@
   "KlvTze": "(UTC+05:30) Sri Jayawardenepura",
   "KoBDbT": "(UTC-02:00) Coordinated Universal Time-02",
   "Kw3bWO": "(UTC+02:00) Istanbul",
+  "KwGA+K": "Select a Function App resource",
   "L+PY+j": "Required. The number of objects to take from the Collection. Must be a positive integer.",
   "L0UAzs": "Returns the day of week component of a string timestamp",
   "L4RJF0": "There are no results for your search",
@@ -554,6 +555,7 @@
   "V0le5X": "Enter a valid JSON.",
   "VA7M1u": "In App",
   "VE3cxq": "(UTC-07:00) Mountain Time (US & Canada)",
+  "VHm1Sr": "Select an App Service resource",
   "VI5Sa8": "Expand",
   "VKAk5g": "The provided workflow run name is not valid.",
   "VL9wOu": "Must provide value for parameter.",
@@ -638,6 +640,7 @@
   "_+dlOgj.comment": "Timezone value ",
   "_+g+mch.comment": "Label for description of custom multipartBody Function",
   "_+iMTt7.comment": "aria label description for check button",
+  "_+jnjtp.comment": "Select a Manual Workflow resource",
   "_+lpuMl.comment": "Required value parameter to return given if function is false",
   "_+xiT4Q.comment": "title for pagination setting",
   "_//nQG4.comment": "Label for api selection",
@@ -731,7 +734,6 @@
   "_3ERi+E.comment": "Title for terms of service iframe.",
   "_3FoqCK.comment": "Timezone value ",
   "_3GINhd.comment": "Heading for a tooltip explaining Triggers",
-  "_3JZAUy.comment": "Label for function app selection",
   "_3NhwIJ.comment": "Required delimeter parameter to apply split function with",
   "_3O0i4j.comment": "No dynamic content available description",
   "_3PgHCT.comment": "Timezone value ",
@@ -1005,6 +1007,7 @@
   "_KlvTze.comment": "Timezone value ",
   "_KoBDbT.comment": "Timezone value ",
   "_Kw3bWO.comment": "Timezone value ",
+  "_KwGA+K.comment": "Select a Function App resource",
   "_L+PY+j.comment": "Required number parameter to get number of objects for take function",
   "_L0UAzs.comment": "Label for description of custom dayOfWeek Function",
   "_L4RJF0.comment": "Text for when no tokens match search query",
@@ -1184,6 +1187,7 @@
   "_V0le5X.comment": "Invalid JSON",
   "_VA7M1u.comment": "\"In App\" category name",
   "_VE3cxq.comment": "Timezone value ",
+  "_VHm1Sr.comment": "Select an App Service resource",
   "_VI5Sa8.comment": "Label to expand",
   "_VKAk5g.comment": "Message text for an invalid run ID",
   "_VL9wOu.comment": "Error message when the workflow parameter value is empty.",
@@ -1341,6 +1345,7 @@
   "_f1j0to.comment": "Optional end index parameter to obtain substring",
   "_fBQBw/.comment": "Label for description of custom greaterOrEquals Function",
   "_fDisLL.comment": "Error while creating acl",
+  "_fElufw.comment": "Select an API Management resource",
   "_fGcSFd.comment": "error message for max-exceeding paging count",
   "_faSDuD.comment": "Timezone value ",
   "_faUrud.comment": "Message to show under the loading icon when loading connection parameters",
@@ -1368,6 +1373,7 @@
   "_gg0j4S.comment": "Timezone value ",
   "_gpbgjJ.comment": "Error message for when split on value not found in operation outputs.",
   "_gu9o9z.comment": "Label for description of custom iterationIndexes Function",
+  "_gvDMuq.comment": "Select a Batch Workflow resource",
   "_h1lQDa.comment": "Modal Title text",
   "_h40rpg.comment": "description of retry interval setting",
   "_h6vVbX.comment": "Message to add a source schema",
@@ -1780,6 +1786,7 @@
   "f1j0to": "Optional. The index of where to stop extracting the substring.",
   "fBQBw/": "Returns true if the first argument is greater than or equal to the second",
   "fDisLL": "Acl creation failed for connection. Deleting the connection.",
+  "fElufw": "Select an API Management resource",
   "fGcSFd": "Paging count exceeds maximum value",
   "faSDuD": "(UTC+04:00) Port Louis",
   "faUrud": "Loading connection data...",
@@ -1807,6 +1814,7 @@
   "gg0j4S": "(UTC-06:00) Saskatchewan",
   "gpbgjJ": "Invalid split on value '{splitOn}', cannot find in outputs.",
   "gu9o9z": "When used inside until loop, this function returns the current iteration index of the specified loop.",
+  "gvDMuq": "Select a Batch Workflow resource",
   "h1lQDa": "Enter or paste a sample JSON payload.",
   "h40rpg": "Specify interval in ISO 8601 format.",
   "h6vVbX": "Add a source schema first, then select elements to build your map",
