--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -357,6 +357,7 @@
   "J5/7vN": "Converts a string to lowercase using the casing rules of the invariant culture",
   "J55HA9": "Invalid operation. Number of items: {length}.",
   "J9wWry": "Parameters",
+  "JAIV0h": "The current map contains {numOfIssues} {issue}.",
   "JErLDT": "Delete",
   "JNQHws": "Required. A string that contains the time.",
   "JOs7It": "Map Checker",
@@ -501,10 +502,12 @@
   "RZ1MIN": "Switch to input entire array",
   "RhH4pF": "{minutes, plural, one {# minute} other {# minutes}}",
   "RkgScy": "6",
+  "RnBddN": "issue",
   "S8P4N5": "Delete",
   "SADSSs": "(UTC+12:00) Petropavlovsk-Kamchatsky - Old",
   "SCCE6s": "Password",
   "SGxmEY": "Enter a Dictionary",
+  "SJFVxf": "issues",
   "SKXopi": "Convert the parameter to an integer",
   "SLJkRn": "Remove input",
   "SLZ0n4": "Checks if the string starts with a value (case-insensitive, invariant culture)",
@@ -990,6 +993,7 @@
   "_J5/7vN.comment": "Label for description of custom toLower Function",
   "_J55HA9.comment": "Exception message for invalid formdata operation.",
   "_J9wWry.comment": "Heading section for Parameter tokens",
+  "_JAIV0h.comment": "Message when failing to save due to errors",
   "_JErLDT.comment": "Delete label",
   "_JNQHws.comment": "Required string parameter that contains the time",
   "_JOs7It.comment": "Button text for open the map checker",
@@ -1134,10 +1138,12 @@
   "_RZ1MIN.comment": "Label for switching input to Text",
   "_RhH4pF.comment": "A duration of time shown in minutes",
   "_RkgScy.comment": "Hour of the day",
+  "_RnBddN.comment": "Issue, singular",
   "_S8P4N5.comment": "type and label to delete a value",
   "_SADSSs.comment": "Timezone value ",
   "_SCCE6s.comment": "Basic Password Label Display Name",
   "_SGxmEY.comment": "Placeholder for empty collapsed dictionary",
+  "_SJFVxf.comment": "Issues, plural",
   "_SKXopi.comment": "Label for description of custom int Function",
   "_SLJkRn.comment": "Remove input",
   "_SLZ0n4.comment": "Label for description of custom startsWith Function",
@@ -1604,6 +1610,7 @@
   "_uR9WuI.comment": "Required collection parameters to check union function on",
   "_uRurmg.comment": "Timezone value ",
   "_uUlBZ8.comment": "Label for description of custom addHours Function",
+  "_uWf/I5.comment": "Button to open map checker",
   "_uXJdAh.comment": "Placeholder text to search token picker",
   "_uZH8Qs.comment": "description of action timeout setting",
   "_uc/PoD.comment": "Required integer parameter to see how far in the past",
@@ -2039,6 +2046,7 @@
   "uR9WuI": "Required. The collections to evaluate. An object that appears in any of the collections also appears in the result.",
   "uRurmg": "(UTC+10:00) Guam, Port Moresby",
   "uUlBZ8": "Adds an integer number of hours to a string timestamp passed in",
+  "uWf/I5": "Show me",
   "uXJdAh": "Search dynamic content",
   "uZH8Qs": "Limit the maximum duration between the retries and asynchronous responses for this action. Note: This does not alter the request timeout of a single request.",
   "uc/PoD": "Required. The number of time units the desired time is in the past.",
