Added manifests for adding batch and function actions

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -169,6 +169,7 @@
   "7KxCGX": "(UTC+10:30) Lord Howe Island",
   "7LmpNN": "Parameter \"{parameterName}\" cannot be found for this operation",
   "7QymrD": "Required. The string from which the substring is taken.",
+  "7TCpqt": "Select",
   "7WVgiU": "Configure",
   "7ZR1xr": "Add an action",
   "7aJqIH": "Optional. The locale to be used when formatting (defaults to 'en-us').",
@@ -488,6 +489,7 @@
   "QknZQ1": "Loading...",
   "Qn8qxn": "Returns a string in date format",
   "QpRRt3": "Required. The string to delimit items with.",
+  "QpX2+j": "Location",
   "QrQDdp": "Required. A string containing the unit of time specified in the interval to subtract.",
   "Qu1HkA": "{hours}h",
   "Qy0Kha": "Triggers cannot be deleted.",
@@ -801,6 +803,7 @@
   "_7KxCGX.comment": "Timezone value ",
   "_7LmpNN.comment": "Error message to show in dropdown when dependent parameter is not found",
   "_7QymrD.comment": "Required string parameter required to obtain substring",
+  "_7TCpqt.comment": "Select button text",
   "_7WVgiU.comment": "Button text for opening the configuration",
   "_7ZR1xr.comment": "Text on example action node",
   "_7aJqIH.comment": "Optional locale parameter to apply formatNumber function with",
@@ -1120,6 +1123,7 @@
   "_QknZQ1.comment": "This is a message shown while loading. This is announced text that is said out loud with screen readers. Not shown in text.",
   "_Qn8qxn.comment": "Label for description of custom formatDateTime Function",
   "_QpRRt3.comment": "Required string parameter to separate objects and join function on",
+  "_QpX2+j.comment": "Header for resource location",
   "_QrQDdp.comment": "Required string parameter to represent the unit of time",
   "_Qu1HkA.comment": "This is a period in time in hours. {hours} is replaced by the number and h is an abbreviation of hours",
   "_Qy0Kha.comment": "Text to explain that triggers cannot be deleted",
