Localize text and add Clippy :)

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -620,6 +620,7 @@
   "YaFjJQ": "Returns a single array or object with all the elements that are in either array or object passed to this function. The parameters for the function can either be a set of objects or a set of arrays (not a mixture thereof). If there are two objects with the same name in the final output, the last object with that name appears in the final object.",
   "YfwZJO": "Search Tips",
   "Yh5OVd": "Custom value does not match one of the allowed types for this input",
+  "YlesUQ": "Your map is in perfect condition",
   "YoQara": "None",
   "Yuu5CD": "Zoom out",
   "Z9PWl/": "Retry Policy count is invalid (Must be from {min} to {max})",
@@ -1256,6 +1257,7 @@
   "_YaFjJQ.comment": "Label for signatures of custom union Function",
   "_YfwZJO.comment": "Search tip header label",
   "_Yh5OVd.comment": "Error message for when custom value does not match one of the function node input's allowed types",
+  "_YlesUQ.comment": "Message displayed when map checker has no errors or warnings",
   "_YoQara.comment": "Display text for when About Panel has no Tags",
   "_Yuu5CD.comment": "Label to zoom the canvas out",
   "_Z9PWl/.comment": "error message for invalid retry count",
