All resource operations can now be added

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -94,6 +94,7 @@
   "2gzGrJ": "Required. The name of the action with a form-data or form-encoded response.",
   "2ri1Kf": "(UTC+02:00) Damascus",
   "2tTQ0A": "On",
+  "2vnYre": "Add Action",
   "2wJZkB": "Empty add dynamic content button",
   "2xhbE1": "(UTC+11:00) Magadan",
   "33+WHG": "Identifier",
@@ -169,7 +170,6 @@
   "7KxCGX": "(UTC+10:30) Lord Howe Island",
   "7LmpNN": "Parameter \"{parameterName}\" cannot be found for this operation",
   "7QymrD": "Required. The string from which the substring is taken.",
-  "7TCpqt": "Select",
   "7WVgiU": "Configure",
   "7ZR1xr": "Add an action",
   "7aJqIH": "Optional. The locale to be used when formatting (defaults to 'en-us').",
@@ -728,6 +728,7 @@
   "_2gzGrJ.comment": "Required string parameter to identify action name for formDataValue function",
   "_2ri1Kf.comment": "Timezone value ",
   "_2tTQ0A.comment": "label when setting is on",
+  "_2vnYre.comment": "Add action button text",
   "_2wJZkB.comment": "Alt text for empty dynamic content icon",
   "_2xhbE1.comment": "Timezone value ",
   "_33+WHG.comment": "Column header text for identifier",
@@ -803,7 +804,6 @@
   "_7KxCGX.comment": "Timezone value ",
   "_7LmpNN.comment": "Error message to show in dropdown when dependent parameter is not found",
   "_7QymrD.comment": "Required string parameter required to obtain substring",
-  "_7TCpqt.comment": "Select button text",
   "_7WVgiU.comment": "Button text for opening the configuration",
   "_7ZR1xr.comment": "Text on example action node",
   "_7aJqIH.comment": "Optional locale parameter to apply formatNumber function with",
