Fix for clippy icon

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -623,6 +623,7 @@
   "YlesUQ": "Your map is in perfect condition",
   "YoQara": "None",
   "Yuu5CD": "Zoom out",
+  "Z657PF": "Function is missing required inputs",
   "Z9PWl/": "Retry Policy count is invalid (Must be from {min} to {max})",
   "ZBJiuD": "Status",
   "ZCFMoe": "Body",
@@ -1260,6 +1261,7 @@
   "_YlesUQ.comment": "Message displayed when map checker has no errors or warnings",
   "_YoQara.comment": "Display text for when About Panel has no Tags",
   "_Yuu5CD.comment": "Label to zoom the canvas out",
+  "_Z657PF.comment": "Title for a function missing a required input card",
   "_Z9PWl/.comment": "error message for invalid retry count",
   "_ZBJiuD.comment": "Status text",
   "_ZCFMoe.comment": "Display name for body outputs",
@@ -1355,6 +1357,7 @@
   "_fBQBw/.comment": "Label for description of custom greaterOrEquals Function",
   "_fDisLL.comment": "Error while creating acl",
   "_fGcSFd.comment": "error message for max-exceeding paging count",
+  "_fWsZhJ.comment": "Body text for a function missing a required input card",
   "_faSDuD.comment": "Timezone value ",
   "_faUrud.comment": "Message to show under the loading icon when loading connection parameters",
   "_fc1AV8.comment": "Callback url method",
@@ -1433,6 +1436,7 @@
   "_jfInxm.comment": "Parameter Link Text",
   "_jgOaTX.comment": "Error Message on generating schema based on payload",
   "_jjYA4u.comment": "Error message to show when reference format is unsupported, {referenceKeyFormat} will be replaced based on action definition",
+  "_jlc/pM.comment": "Body text for the input type mismatch card",
   "_juR40n.comment": "label for request options input",
   "_juvF+0.comment": "Gateway dropdown label",
   "_k/oqFL.comment": "Required base64 string parameter to be converted using base64ToString function",
@@ -1656,6 +1660,7 @@
   "_wV3Lmd.comment": "Label to delete dictionary item",
   "_wWVQuK.comment": "Label for description of custom if Function",
   "_wkiETV.comment": "Client Tracking ID text",
+  "_wkvUUA.comment": "Title for the input type mismatch card",
   "_wl7X0l.comment": "Label to hide the mini-map",
   "_wmDUGV.comment": "Label for description of custom convertToUtc Function",
   "_wmw/ai.comment": "Label for description of custom union Function",
@@ -1791,6 +1796,7 @@
   "fBQBw/": "Returns true if the first argument is greater than or equal to the second",
   "fDisLL": "Acl creation failed for connection. Deleting the connection.",
   "fGcSFd": "Paging count exceeds maximum value",
+  "fWsZhJ": "{functionName} has an non-terminating connection chain",
   "faSDuD": "(UTC+04:00) Port Louis",
   "faUrud": "Loading connection data...",
   "fc1AV8": "HTTP {method} URL",
@@ -1869,6 +1875,7 @@
   "jfInxm": "Edit in JSON",
   "jgOaTX": "Unable to generate schema",
   "jjYA4u": "Unsupported manifest connection reference format: '{referenceKeyFormat}'",
+  "jlc/pM": "{nodeName} has an input with a mismatched type",
   "juR40n": "Duration",
   "juvF+0": "Gateway",
   "k/oqFL": "Required. The base64 encoded string.",
@@ -2092,6 +2099,7 @@
   "wV3Lmd": "Click to delete item",
   "wWVQuK": "Returns a specified value based on whether the expression resulted in true or false",
   "wkiETV": "Client Tracking ID",
+  "wkvUUA": "Input type mismatch",
   "wl7X0l": "Hide mini-map",
   "wmDUGV": "Converts a string timestamp passed in from a source time zone to UTC",
   "wmw/ai": "Returns a single array or object with all the elements that are in either the array or object passed to this function",
