[DM | Schema tree] Filter by data types (#1634)
* Setup for data type filtering (incl. migrate searchbar to V9 Input)

* Alphabetize NormalizedDataType

* UX for data type filtering + separate FunctionList searchbar from schema tree one

* Style filter menu

* Implement the actual filtering by data type

* Refactor MenuItems

* Package-lock.json

---------

Co-authored-by: Nicolas Layne <nicolaslayne@microsoft.com>

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -313,6 +313,7 @@
   "GCjJnP": "Enter a valid Json.",
   "GD3m4X": "Expanded",
   "GDUGlm": "Enter authority",
+  "GIUSQs": "Filter by data type",
   "GLd3MU": "Required. The object to find inside the Within collection.",
   "GUdmgm": "Close the map checker",
   "GXXLuT": "Enter a valid boolean.",
@@ -951,6 +952,7 @@
   "_GCjJnP.comment": "Invalid Json",
   "_GD3m4X.comment": "Function display radio group option for expanded",
   "_GDUGlm.comment": "Authority Placeholder Text",
+  "_GIUSQs.comment": "Filter by data type",
   "_GLd3MU.comment": "Required object parameter to find for the contains function",
   "_GUdmgm.comment": "Map checker close button",
   "_GXXLuT.comment": "Error validation message",
@@ -1341,6 +1343,7 @@
   "_dxh2CJ.comment": "timed out run",
   "_e00zot.comment": "Recurrence parameter group title",
   "_e4Onhn.comment": "This is a status message to be shown in a monitoring view",
+  "_e9OvzW.comment": "Clear",
   "_eFet4K.comment": "Action Tracking ID text",
   "_eGa1Wa.comment": "Timezone value ",
   "_eHgi14.comment": "Required string parameter to determine variable wanted",
@@ -1780,6 +1783,7 @@
   "dxh2CJ": "timed out",
   "e00zot": "How often do you want to check for items?",
   "e4Onhn": "Not specified",
+  "e9OvzW": "Clear",
   "eFet4K": "Action Tracking ID",
   "eGa1Wa": "(UTC+05:00) Ekaterinburg",
   "eHgi14": "Required. The name of the variable whose value you want.",
