--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -403,7 +403,6 @@
   "M4H0gh": "Remove",
   "M6U2LE": "The parameters will be saved when the workflow is saved. You can edit it here before save or edit it in the parameter page after save.",
   "M8Aqm4": "Optional. The name of the scoped action where you want the inputs and outputs from the top-level actions inside that scope.",
-  "M9Zj10": "No results found for: {searchTerm}",
   "M9mzP6": "Required. The number to add to Summand 2.",
   "MCQODe": "Secure outputs of the operation and references of output properties.",
   "MDbmMw": "Required. The collections to evaluate. An object must be in all collections passed in to appear in the result.",
@@ -558,6 +557,7 @@
   "VA7M1u": "In App",
   "VE3cxq": "(UTC-07:00) Mountain Time (US & Canada)",
   "VI5Sa8": "Expand",
+  "VI7EqG": "No results found for {searchTerm}",
   "VKAk5g": "The provided workflow run name is not valid.",
   "VL9wOu": "Must provide value for parameter.",
   "VLc3FV": "Source schema",
@@ -1037,7 +1037,6 @@
   "_M4H0gh.comment": "Label to remove",
   "_M6U2LE.comment": "Text for Info Bar",
   "_M8Aqm4.comment": "Optional string parameter to determine specific actions inside top-level actions",
-  "_M9Zj10.comment": "Text to show when there are no search results",
   "_M9mzP6.comment": "Required number parameter to be summed in add function",
   "_MCQODe.comment": "description of secure outputs setting",
   "_MDbmMw.comment": "Required collection parameters to check intersection function on",
@@ -1192,6 +1191,7 @@
   "_VA7M1u.comment": "\"In App\" category name",
   "_VE3cxq.comment": "Timezone value ",
   "_VI5Sa8.comment": "Label to expand",
+  "_VI7EqG.comment": "Text to show when there are no search results",
   "_VKAk5g.comment": "Message text for an invalid run ID",
   "_VL9wOu.comment": "Error message when the workflow parameter value is empty.",
   "_VLc3FV.comment": "Source schema",
