Added empty state for browse page

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1641,6 +1641,7 @@
   "_vrYqUF.comment": "Label for button to allow user to create custom value in combobox",
   "_vwH/XV.comment": "Create Parameter Text",
   "_vz2gZC.comment": "Header text for workflow properties",
+  "_w0pI5M.comment": "Text to show when there are no browse results with the given filters",
   "_w16qh+.comment": "Display name for queries in outputs",
   "_w5Hhig.comment": "Day of the week",
   "_w8ijDZ.comment": "Button to collapse a pane",
@@ -2083,6 +2084,7 @@
   "vrYqUF": "Enter custom value",
   "vwH/XV": "Create parameter",
   "vz2gZC": "Workflow Properties",
+  "w0pI5M": "No results found for the specified filters",
   "w16qh+": "Queries",
   "w5Hhig": "Sunday",
   "w8ijDZ": "Collapse",
