Expose whole view

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -189,6 +189,7 @@
   "8JEHiY": "Saturday",
   "8L+oIz": "Cannot render designer due to multiple triggers in definition.",
   "8ND+Yc": "Please enable managed identity for the logic app.",
+  "8SxNQC": "Overview",
   "8U0KPg": "Required. The string to be URI encoded.",
   "8UfIAk": "Enter secret as plain text or use a secure parameter",
   "8Y5xpK": "Thursday",
@@ -526,6 +527,7 @@
   "TPV6j/": "Paging count invalid",
   "TRpSCQ": "Action Type",
   "TUaunO": "Enter a value",
+  "TVrS/G": "Whole view",
   "TX4Kdr": "Create a new connection",
   "TY4HzZ": "Add or replace your schemas.",
   "Tayrub": "Raw",
@@ -823,6 +825,7 @@
   "_8JEHiY.comment": "Day of the week",
   "_8L+oIz.comment": "This is an error message shown when a user tries to load a workflow defintion that contains Multiple entry points which isn't supported",
   "_8ND+Yc.comment": "Error Message for disabled managed identity",
+  "_8SxNQC.comment": "Button text for overview",
   "_8U0KPg.comment": "Required string parameter to be encoded using uriComponent function",
   "_8UfIAk.comment": "Secret Placeholder Text",
   "_8Y5xpK.comment": "Day of the week",
@@ -1160,6 +1163,7 @@
   "_TPV6j/.comment": "error message for invalid paging count",
   "_TRpSCQ.comment": "Filter by label",
   "_TUaunO.comment": "error displayed when no value is entered",
+  "_TVrS/G.comment": "Button text for whole overview",
   "_TX4Kdr.comment": "aria label description for create button",
   "_TY4HzZ.comment": "Description for the schema section",
   "_Tayrub.comment": "Authentication type",
