Rename Whole view to Global view

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -341,6 +341,7 @@
   "HsO1Rd": "{addIcon} Install Gateway",
   "Hyp0Ao": "Remove parameter \"{parameterName}\" and its value",
   "HzS2gJ": "Dynamic content not supported as properties in authentication.",
+  "I7/+er": "Global view",
   "IA+Ogm": "22",
   "IPbBB2": "(UTC+12:00) Fiji",
   "IQyOth": "If available, dynamic content is automatically generated from the connectors and actions you choose for your flow.",
@@ -527,7 +528,6 @@
   "TPV6j/": "Paging count invalid",
   "TRpSCQ": "Action Type",
   "TUaunO": "Enter a value",
-  "TVrS/G": "Whole view",
   "TX4Kdr": "Create a new connection",
   "TY4HzZ": "Add or replace your schemas.",
   "Tayrub": "Raw",
@@ -977,6 +977,7 @@
   "_HsO1Rd.comment": "Option to install a new gateway, links to new page",
   "_Hyp0Ao.comment": "Tooltip for remove parameter button",
   "_HzS2gJ.comment": "Error message for when putting token in authentication property",
+  "_I7/+er.comment": "Button text for whole overview",
   "_IA+Ogm.comment": "Hour of the day",
   "_IPbBB2.comment": "Timezone value ",
   "_IQyOth.comment": "Section 1 of text for including dynamic content section",
@@ -1163,7 +1164,6 @@
   "_TPV6j/.comment": "error message for invalid paging count",
   "_TRpSCQ.comment": "Filter by label",
   "_TUaunO.comment": "error displayed when no value is entered",
-  "_TVrS/G.comment": "Button text for whole overview",
   "_TX4Kdr.comment": "aria label description for create button",
   "_TY4HzZ.comment": "Description for the schema section",
   "_Tayrub.comment": "Authentication type",
