[DM | Overview] Rename WholeView to GlobalView and expose it on the command bar (#1677)
* Expose whole view

* Rename Whole view to Global view

---------

Co-authored-by: Nicolas Layne <nicolaslayne@microsoft.com>

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -189,6 +189,7 @@
   "8JEHiY": "Saturday",
   "8L+oIz": "Cannot render designer due to multiple triggers in definition.",
   "8ND+Yc": "Please enable managed identity for the logic app.",
+  "8SxNQC": "Overview",
   "8U0KPg": "Required. The string to be URI encoded.",
   "8UfIAk": "Enter secret as plain text or use a secure parameter",
   "8Y5xpK": "Thursday",
@@ -340,6 +341,7 @@
   "HsO1Rd": "{addIcon} Install Gateway",
   "Hyp0Ao": "Remove parameter \"{parameterName}\" and its value",
   "HzS2gJ": "Dynamic content not supported as properties in authentication.",
+  "I7/+er": "Global view",
   "IA+Ogm": "22",
   "IPbBB2": "(UTC+12:00) Fiji",
   "IQyOth": "If available, dynamic content is automatically generated from the connectors and actions you choose for your flow.",
@@ -823,6 +825,7 @@
   "_8JEHiY.comment": "Day of the week",
   "_8L+oIz.comment": "This is an error message shown when a user tries to load a workflow defintion that contains Multiple entry points which isn't supported",
   "_8ND+Yc.comment": "Error Message for disabled managed identity",
+  "_8SxNQC.comment": "Button text for overview",
   "_8U0KPg.comment": "Required string parameter to be encoded using uriComponent function",
   "_8UfIAk.comment": "Secret Placeholder Text",
   "_8Y5xpK.comment": "Day of the week",
@@ -974,6 +977,7 @@
   "_HsO1Rd.comment": "Option to install a new gateway, links to new page",
   "_Hyp0Ao.comment": "Tooltip for remove parameter button",
   "_HzS2gJ.comment": "Error message for when putting token in authentication property",
+  "_I7/+er.comment": "Button text for whole overview",
   "_IA+Ogm.comment": "Hour of the day",
   "_IPbBB2.comment": "Timezone value ",
   "_IQyOth.comment": "Section 1 of text for including dynamic content section",
