added aria label to breadcrumb chevron

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -245,6 +245,7 @@
   "BQCPY7": "Required. The string to decode the URL-unsafe characters from.",
   "BQSRV0": "Enter password as plain text or use a secure parameter",
   "BSHFiw": "(UTC+08:00) Perth",
+  "BUutcC": "Expant list of sibling elements",
   "BVOUxP": "(UTC-05:00) Havana",
   "Bn8iTS": "State type:",
   "BoMvF2": "Collapse",
@@ -879,6 +880,7 @@
   "_BQCPY7.comment": "Required string parameter to be decoded using decodeUriComponent function",
   "_BQSRV0.comment": "Basic Password Placeholder Text",
   "_BSHFiw.comment": "Timezone value ",
+  "_BUutcC.comment": "Button that toggles list of elements to view",
   "_BVOUxP.comment": "Timezone value ",
   "_Bn8iTS.comment": "Label text for workflow state type (Stateless or Stateful)",
   "_BoMvF2.comment": "Label for collapsing group",
