--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1641,6 +1641,7 @@
   "_vlDynP.comment": "Discard",
   "_vr70Gn.comment": "Create a connection for selected connector",
   "_vrYqUF.comment": "Label for button to allow user to create custom value in combobox",
+  "_vvSHR8.comment": "Change context of the canvas to view that element's children",
   "_vwH/XV.comment": "Create Parameter Text",
   "_vz2gZC.comment": "Header text for workflow properties",
   "_w0pI5M.comment": "Text to show when there are no browse results with the given filters",
@@ -2084,6 +2085,7 @@
   "vlDynP": "Discard",
   "vr70Gn": "Create a connection for {connectorName}.",
   "vrYqUF": "Enter custom value",
+  "vvSHR8": "Navigate to element and view children",
   "vwH/XV": "Create parameter",
   "vz2gZC": "Workflow Properties",
   "w0pI5M": "No results found for the specified filters",
